2002-01-08 Stefan Petersen   <spe@geda.seul.org>

	* scheme/gnet-pads.scm, scheme/gnet-PCB.scm : 
	  display-connections functions rewritten to non-recursive since
	  it caused guile stack overflow when the schematics grew very big.

2002-01-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-maxascii.scm:  Checked in new backed by Dave Lawrence

2001-07-26 Stefan Petersen   <spe@geda.seul.org>

	* scheme/gnetlist.scm, scheme/gnet-pads.scm, scheme/gnet-PCB.scm:
	  gnetlist:wrap now accepts character(s) to terminate line with.
	  Suggested by Roger Williams <roger@coelacanth.com> since PADS
	  didn't like lines ending with \.
	
2001-07-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, src/gnetlist.c, src/g_rc.c: Cleanup and added the
	  ability to have the rc files in a different location using
	  --with-rcdir (was broken recently, now fixed)

	* src/gnetlist.c, src/g_rc.c: More work on getting above to work
	  completely.

        * src/gnetlist.c, i_vars.c, parsecmd.c, s_net.c, s_rename.c:
          Added patch by Dan Mcmahill for 64-bit architectures.
	
2001-07-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, aclocal.m4: got configure script to be more like
	  gschem wrt the guile detection
	
2001-07-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Fixed all the LDFLAGS to be correct (and only link
	  the libraries once)

	* configure.in: Bumped up version to 20010722

	* configure.in: More updates to get cygwin to build right

	* src/Makefile.am: Changed the order in which things are linked
	  (guile last)

2001-07-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/bompp.sh: Added bom pretty printer written by Rolf Fiedler

	* scripts/annotate.sh: Added script written by JM Routoure and modified
	  by Rolf Fiedler

	* src/unannotate.sh: Added script written by Rolf Fiedler

	* src/bom_xref.sh: Added script written by Rolf Fiedler

2001-07-06 Ales Hvezda   <ahvezda@geda.seul.org>
