@@ -65,6 +65,8 @@ Thomas Heidel		- For contributing a significant set of bug fixes
 
 Dave Lawrence		- For contributing the maxascii backend.
 
+Rich Walker		- For suggesting a bug fix to the PCBboard backend
+
 Also thanks go to all the people on the geda-dev mailing list.  Many of
 the subscribers provided good suggestions which are greatly appreciated
 (and even implemented :-).  
