@@ -1,3 +1,9 @@
+2002-01-27 Ales Hvezda   <ahvezda@geda.seul.org>
+	
+	* scheme/gnet-PCBboard.scm: put in the fix from Rich Walker about
+	  pcb not finding certain components.  Also seems to fix the space
+	  problem in the footprint attribute.
+
 2002-01-08 Stefan Petersen   <spe@geda.seul.org>
 
 	* scheme/gnet-pads.scm, scheme/gnet-PCB.scm : 
